Bug 32596 - [4.3 Regression] ICE with inline template specialization in anonymous namespace
Summary: [4.3 Regression] ICE with inline template specialization in anonymous namespace
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: c++ (show other bugs)
Version: 4.3.0
: P1 critical
Target Milestone: 4.3.0
Assignee: Jakub Jelinek
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords: ice-on-valid-code
Depends on:
Blocks: 32400 32891
  Show dependency treegraph
 
Reported: 2007-07-02 19:56 UTC by David Binderman
Modified: 2007-08-28 16:10 UTC (History)
5 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2007-08-21 10:54:51


Attachments
gzipped C++ source code (224.01 KB, application/octet-stream)
2007-07-02 19:57 UTC, David Binderman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Binderman 2007-07-02 19:56:03 UTC
I just tried to compile Suse Linux package ruby-zypp-0.1-83 with the
GNU C++ compiler version 4.3 snapshot 20070629

The compiler said

/usr/include/boost/regex/v4/basic_regex_creator.hpp:515: internal compiler error: in expand_or_defer_fn, at cp/semantics.c:3220
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

Preprocessed source code attached. No flags required.
Comment 1 David Binderman 2007-07-02 19:57:30 UTC
Created attachment 13830 [details]
gzipped C++ source code
Comment 2 Andrew Pinski 2007-07-08 10:46:52 UTC
Reduced testcase:
namespace
{
  template<class T> inline void char_less(void) { }
  template<> inline void char_less<char>(void) { }
}
Comment 3 Jakub Jelinek 2007-08-15 15:31:14 UTC
Caused by PR31923.
Comment 4 Jakub Jelinek 2007-08-28 16:08:32 UTC
Subject: Bug 32596

Author: jakub
Date: Tue Aug 28 16:08:02 2007
New Revision: 127863

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=127863
Log:
	PR c++/32596
	PR c++/32400
	* pt.c (check_explicit_specialization): Set DECL_INTERFACE_KNOWN
	and DECL_NOT_REALLY_EXTERN if tmpl_func is not public.

	* g++.dg/ext/visibility/anon5.C: New test.

Added:
    trunk/gcc/testsuite/g++.dg/ext/visibility/anon5.C
Modified:
    trunk/gcc/cp/ChangeLog
    trunk/gcc/cp/pt.c
    trunk/gcc/testsuite/ChangeLog

Comment 5 Jakub Jelinek 2007-08-28 16:10:01 UTC
Fixed.