gcc/testsuite/g++.dg/ext/visibility/anon5.C
@@ -1,0 +1,8 @@
+// PR c++/32596
+// { dg-do compile }
+
+namespace
+{
+  template<class T> inline void char_less(void) { }
+  template<> inline void char_less<char>(void) { }
+}
